# ArnoAlexaSkill

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ruff.yml
src/: lambda_function.py  main.py
src/alexa/: arno_skill.py  hello_world.py
src/alexa/exceptions/: __init__.py  handle_command_exception.py
src/alexa/models/: __init__.py  alexa_discovery.py  alexa_response.py  arno_fan_discovery.py
src/clients/: __init__.py  http_client.py  sqs_client.py
src/commands/: __init__.py  arno_command.py
src/consumer/: main.py
src/models/: __init__.py  arno_response.py
src/utils/: __init__.py  dict_public_properties.py  utc_timestamp.py
