[tool.poetry]
name = "arnofanvx10"
version = "0.1.0"
description = ""
authors = ["viniferraria <39192461+viniferraria@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.4"
boto3 = "^1.26.55"
ask-sdk = "^1.18.0"
pytz = "^2022.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.256"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
